{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 59,
  "lineage": "26a75bd4-5b73-faaf-2ea5-7f679f55f7d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "customer_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:670121248505:instance/i-06d54e98c47058d96",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d54e98c47058d96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ce6d2b9e6f2125c",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-54-164-115-191.compute-1.amazonaws.com",
            "public_ip": "54.164.115.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab1da63fe38e1a85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2fe213e807a03d7",
            "tags": {
              "Name": "customer-instance"
            },
            "tags_all": {
              "Name": "customer-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f68b8371f07da8d4"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh-icmp",
            "aws_subnet.customer-vpc-public-subnet-1",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openswan_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e4e35cccc6189f4",
            "arn": "arn:aws:ec2:us-east-1:670121248505:instance/i-075e66a228cc88d9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075e66a228cc88d9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0088dfc03a36f3188",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-75-101-176-126.compute-1.amazonaws.com",
            "public_ip": "75.101.176.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0667990bdd17140",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c2fe213e807a03d7",
            "tags": {
              "Name": "openswan-instance"
            },
            "tags_all": {
              "Name": "openswan-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f68b8371f07da8d4"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh-icmp",
            "aws_subnet.customer-vpc-public-subnet-1",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customer-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670121248505:internet-gateway/igw-04e0aac068e6fb75a",
            "id": "igw-04e0aac068e6fb75a",
            "owner_id": "670121248505",
            "tags": {
              "Name": "customer-vpc"
            },
            "tags_all": {
              "Name": "customer-vpc"
            },
            "vpc_id": "vpc-0135614e93c793123"
          },
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer-vpc-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670121248505:route-table/rtb-0c022c1e9756d98ff",
            "id": "rtb-0c022c1e9756d98ff",
            "owner_id": "670121248505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e0aac068e6fb75a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer-vpc-public-route"
            },
            "tags_all": {
              "Name": "customer-vpc-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135614e93c793123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.customer-vpc-igw",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer-vpc-public-1-a-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feaad6a13752a560",
            "route_table_id": "rtb-0c022c1e9756d98ff",
            "subnet_id": "subnet-0c2fe213e807a03d7"
          },
          "dependencies": [
            "aws_internet_gateway.customer-vpc-igw",
            "aws_route_table.customer-vpc-public-route",
            "aws_subnet.customer-vpc-public-subnet-1",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670121248505:security-group/sg-0f68b8371f07da8d4",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68b8371f07da8d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-icmp",
            "name_prefix": "",
            "owner_id": "670121248505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-icmp"
            },
            "tags_all": {
              "Name": "allow-ssh-icmp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135614e93c793123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer-vpc-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670121248505:subnet/subnet-08d4312fb7d086e2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4312fb7d086e2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670121248505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "customer-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0135614e93c793123"
          },
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer-vpc-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670121248505:subnet/subnet-0c2fe213e807a03d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2fe213e807a03d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670121248505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "customer-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0135614e93c793123"
          },
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customer-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670121248505:vpc/vpc-0135614e93c793123",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b520a7267bcc5bc6",
            "default_route_table_id": "rtb-09b4bb6c5ebe6bfdf",
            "default_security_group_id": "sg-07a5caa0d8805426b",
            "dhcp_options_id": "dopt-dc19b6a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0135614e93c793123",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b4bb6c5ebe6bfdf",
            "owner_id": "670121248505",
            "tags": {
              "Name": "customer-vpc"
            },
            "tags_all": {
              "Name": "customer-vpc"
            }
          }
        }
      ]
    }
  ]
}